--- a/tmpl_2019-08.vcxproj.filters
+++ b/tmpl_2019-08.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="UIText.cpp">
       <Filter>UI</Filter>
     </ClCompile>
+    <ClCompile Include="Magma.cpp">
+      <Filter>gameobjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -73,6 +76,9 @@
     </ClInclude>
     <ClInclude Include="UIText.h">
       <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="Magma.h">
+      <Filter>gameobjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
